[gd_scene load_steps=4 format=3 uid="uid://compact_card_visual"]

[ext_resource type="Script" path="res://scenes/exploration/ui/widgets/compact_card_visual.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.95, 0.95, 0.92, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 2
shadow_offset = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.4, 0.8, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.5, 0.9, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CompactCardVisual" type="Control"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 3
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6

[node name="ManaCostContainer" type="Control" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(30, 0)

[node name="ManaCostIcon" type="Panel" parent="HBox/ManaCostContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2(30, 30)
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="ManaCostLabel" type="Label" parent="HBox/ManaCostContainer/ManaCostIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.8)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 16
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardNameLabel" type="Label" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.1, 0.1, 0.1, 1)
theme_override_font_sizes/font_size = 14
text = "Card Name"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightSection" type="Control" parent="HBox"]
layout_mode = 2
custom_minimum_size = Vector2(50, 0)

[node name="ArtThumbnail" type="ColorRect" parent="HBox/RightSection"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.0
offset_right = 0.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 1)

[node name="RarityGem" type="Panel" parent="HBox/RightSection"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -18.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_minimum_size = Vector2(16, 14)

[node name="CopyCountBadge" type="Panel" parent="HBox/RightSection"]
layout_mode = 1
anchors_preset = 7
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -18.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
custom_minimum_size = Vector2(16, 16)

[node name="CopyCountLabel" type="Label" parent="HBox/RightSection/CopyCountBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 10
text = "x2"
horizontal_alignment = 1
vertical_alignment = 1
